scroll spacing issue fixed

--- a/src/assets/scss/intelligence/_intelligence.scss
+++ b/src/assets/scss/intelligence/_intelligence.scss
@@ -30,10 +30,7 @@
 }
 .intelligence-page-section {
   display: flex;
-  margin-top: 8rem;
   .intelligence-section {
-    margin-top: 3rem;
-
     .intell-welcome-card {
       .page-title {
         color: $black-000;
@@ -179,7 +176,6 @@
                 }
               }
               .react-calendar__navigation__arrow {
-                
                 border-radius: 0.8rem;
                 border: 1px solid $grey-E5E !important;
               }
